--- a/index.html
+++ b/index.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Navigation</title>
 </head>
+
 <body>
-    
+    <nav>
+        <div class="logo">
+            <h4>The Nav</h4>
+        </div>
+        <ul>
+            <li>
+                <a href="#">Dashboard</a>
+            </li>
+            <li>
+                <a href="#">Tentang</a>
+            </li>
+            <li>
+                <a href="#">Belajar</a>
+            </li>
+            <li>
+                <a href="#">Projek</a>
+            </li>         
+        </ul>
+    </nav>
 </body>
 </html>
