Add class .nav-link

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
     <nav>
         <div class="logo">
-            <h4>The Nav</h4>
+            <h4>THE NAVIGATION</h4>
         </div>
-        <ul>
+        <ul class="nav-link">
             <li>
                 <a href="#">Dashboard</a>
             </li>
