--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
                 <a href="#">Projek</a>
             </li>         
         </ul>
+        <div class="burger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
     </nav>
 </body>
 </html>
